# Scaler-assesment

./: .gitignore  Dockerfile  README.md  README_HF.md  baseline_results.json  inference.py  main.py  openv.yaml  pyproject.toml  requirements.txt
env/: environment.py  models.py  tasks.py
server/: app.py
