[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-debug-env"
version = "1.0.0"
description = "OpenEnv-compatible SQL debugging and optimization environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "KAUSHAL" }
]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "pydantic==2.5.0",
  "openai>=2.7.2",
  "python-dotenv==1.0.1",
  "httpx==0.25.2",
  "pytest==7.4.3",
  "requests==2.31.0"
]

[project.scripts]
server = "server.app:main"
